--- a/ios-developer.html
+++ b/ios-developer.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/alyvant/jobs/4498590002'>Job Application for iOS Developer at Alyvant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/alyvant/jobs/4498590002'>Job Application for iOS Developer at Alyvant</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -160,7 +160,7 @@
 <p><span class="badge badge-light">Mc Lean, VA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://karmarama.workable.com/jobs/1148015'>Senior iOS Developer - Karmarama</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://karmarama.workable.com/jobs/1148015'>Senior iOS Developer - Karmarama</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... As a Senior iOS Developer you will need to be: An expert in using Xcode, Git and 
 building continuous integration pipelines; Demonstrable mastery in the?...</p>
@@ -223,7 +223,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://redspace.recruiterbox.com/jobs/fk031y1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://redspace.recruiterbox.com/jobs/fk031y1'>
     iOS Developer at REDspace
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -249,7 +249,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Malm?</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://verisure.avature.net/careers/ApplicationMethods?jobId=141'>iOS Developer - Careers Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verisure.avature.net/careers/ApplicationMethods?jobId=141'>iOS Developer - Careers Portal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -285,7 +285,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shop-direct.workable.com/j/1CDD7A2179'>Shop Direct - Jobs: iOS Developer - Apply online</a></h5> 
+<h5><a href='https://shop-direct.workable.com/j/1CDD7A2179'>Shop Direct - Jobs: iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -293,7 +293,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://devjobs.at/job/36023777108'>iOS Mobile Developer - devjobs.at</a></h5> 
+<h5><a href='https://devjobs.at/job/36023777108'>iOS Mobile Developer - devjobs.at</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -345,7 +345,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697018208-senior-ios-developer'>TrophyRoom Pte Ltd Senior IOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697018208-senior-ios-developer'>TrophyRoom Pte Ltd Senior IOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -361,7 +361,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697103227-ios-developer-yogyakarta-indonesia-'>A Job Thing iOS Developer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697103227-ios-developer-yogyakarta-indonesia-'>A Job Thing iOS Developer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -422,7 +422,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/ftja6w5a6n1mwj5xshkuhdyshw'>iOS Developer  | Opportunity Portal</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/ftja6w5a6n1mwj5xshkuhdyshw'>iOS Developer  | Opportunity Portal</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -445,7 +445,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tulip/9e32508b-d771-4569-85dd-7dc3daf1334d'>Tulip Retail - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/tulip/9e32508b-d771-4569-85dd-7dc3daf1334d'>Tulip Retail - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
