--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500558002'>Job Application for Staff DevOps Engineer at MedMen</a></h5> 
+<p><span class="badge badge-light">Culver City, CA</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/bankerstoolbox/job/otOsbfwE'>Abrigo Careers - DevOps Engineer</a></h5> 
+<p><span class="badge badge-light">Raleigh, North Carolina</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://talpasolutions.join.com/jobs/474281-devops-programmer'>Job @ talpasolutions (Essen): DevOps Programmer | JOIN</a></h5> 
 <p><span class="badge badge-light">Essen, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -102,7 +110,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://solactive.join.com/jobs/461584-administrator-devops-sysops-m-f-d-or-dresden'>Job @ Solactive  (Dresden): Administrator (DevOps/... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://solactive.join.com/jobs/461584-administrator-devops-sysops-m-f-d-or-dresden'>Job @ Solactive  (Dresden): Administrator (DevOps/... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -192,7 +200,7 @@
 <p><span class="badge badge-light">Luxembourg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/storj/jobs/4375474002'>Job Application for DevOps Engineer at Storj</a></h5> 
+<h5><a href='https://boards.greenhouse.io/storj/jobs/4375474002'>Job Application for DevOps Engineer at Storj</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -200,7 +208,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://tempo.recruiterbox.com/jobs/fk06zck/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tempo.recruiterbox.com/jobs/fk06zck/'>
     Lead DevOps Engineer at Tempo
 </a></h5> 
 <p><span class="badge badge-light">Reykjav?k, Iceland Montreal</span></p>
@@ -218,7 +226,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/labelbox/ccb94ac3-e1eb-4574-afad-9e635b164ed8'>Labelbox - DevOps Engineer On-Prem</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/ccb94ac3-e1eb-4574-afad-9e635b164ed8'>Labelbox - DevOps Engineer On-Prem</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -320,7 +328,7 @@
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698487076-devops-engineer-ii'>Verisk DevOps Engineer II | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698487076-devops-engineer-ii'>Verisk DevOps Engineer II | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -374,11 +382,11 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">Kyiv, Ukraine  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Sodifrance-Netapsys/743999698463833-ingenieur-e-devops-cloud-h-f'>Sodifrance-Netapsys Ing?nieur(e) DevOps / Cloud H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Sodifrance-Netapsys/743999698463833-ingenieur-e-devops-cloud-h-f'>Sodifrance-Netapsys Ing?nieur(e) DevOps / Cloud H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698462881-cloud-devops-engineer-aws-devops-engineer'>Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698462881-cloud-devops-engineer-aws-devops-engineer'>Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -431,7 +439,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/devops-engineer-mid-dXB4cG908r6Bk3aKiznY58'>DevOps Engineer - Mid #0585 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/devops-engineer-mid-dXB4cG908r6Bk3aKiznY58'>DevOps Engineer - Mid #0585 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -443,7 +451,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Mc Lean, VAMc Lean, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/cloud-devops-engineer-ts-sci-with-polygraph-dEr6Omop8r6yKbcR_n82lY'>Cloud DevOps Engineer - TS/SCI with Polygraph #0421 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/dae/jobs/cloud-devops-engineer-ts-sci-with-polygraph-dEr6Omop8r6yKbcR_n82lY'>Cloud DevOps Engineer - TS/SCI with Polygraph #0421 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -453,14 +461,6 @@ agile service team focused on daily production service delivery and application?
 <hr/>
 <h5><a href='https://careers.jobscore.com/careers/dae/jobs/senior-devops-engineer-ts-sci-with-polygraph-dUeyQEL6qr6zJxaICoXfFy'>Senior DevOps Engineer - TS/SCI with Polygraph #0467 job at Stratus Solutions in Columbia, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/socure/13e60382-1ae2-48a0-ad77-984ac20f9a2a'>Socure - Senior DevOps Engineer</a></h5> 
-<p><span class="badge badge-light">NYC</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://orbitpeople.applytojob.com/apply/oHWBYGP2jX/AWSCloudDevOps-Engineer'>AWS/Cloud/DevOps Engineer - Orb IT People - Career Page</a></h5> 
-<p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
